--- a/16_Shop_MultiProduct/Views/Home/Contact.cshtml
+++ b/16_Shop_MultiProduct/Views/Home/Contact.cshtml
@@ -188,12 +188,14 @@
     }
 
     .template_contact .contact_element svg {
-        fill: #acdbb4;
+        fill: #d11222;
         position: absolute;
         top: 27px;
         left: 20px;
     }
-
+    .form-control{
+    border: 1px solid #d11222;
+    }
     .template_contact .contact_element h4 {
         font-size: 14px;
         font-weight: bold;
