--- a/16_Shop_MultiProduct/Views/Warranty/CheckSeria.cshtml
+++ b/16_Shop_MultiProduct/Views/Warranty/CheckSeria.cshtml
@@ -29,7 +29,7 @@
                     <div class="col-md-3"></div>
                     <div class="col-md-5">
                         <div class="add-to-cart">
-                            <a href="javascript:void(0);" class="button product_type_simple add_to_cart_button ajax_add_to_cart" id="checkWarranty" tabindex="0">Kiểm tra bảo hành</a>
+                            <a href="javascript:void(0);" class="button product_type_simple add_to_cart_button ajax_add_to_cart" id="checkWarranty" tabindex="0">Kiểm tra sản phẩm</a>
                         </div>
 
                     </div>
