--- a/16_Shop_MultiProduct/Views/Home/Contact.cshtml
+++ b/16_Shop_MultiProduct/Views/Home/Contact.cshtml
@@ -64,7 +64,7 @@
                             <input type="text" id="name" value="" placeholder="Tên liên hệ *" name="name" class="form-control input-sm">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control input-sm" id="email" name="email">
+                            <input type="text" class="form-control input-sm" id="email" name="email" placeholder="Email">
                         </div>
                         <div class="form-group">
                             <input type="text" class="form-control input-sm" name="phone" id="phone" placeholder="Số điện thoại *">
