--- a/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -295,7 +295,7 @@
                                                                                 <ul class="menu ovic-menu">
                                                                                     @foreach (var productItem in productCategory)
                                                                                     {
-                                                                                        <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="@Anpero.StringHelpper.GetProductLink(productItem.CatName,productItem.Id)">@productItem.PrName.Split('|').FirstOrDefault().Trim()</a></li>
+                                                                                        <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="@Anpero.StringHelpper.GetProductLink(productItem.PrName,productItem.Id)">@productItem.PrName.Split('|').FirstOrDefault().Trim()</a></li>
                                                                                     }
                                                                                 </ul>
                                                                             </div>
@@ -346,7 +346,7 @@
                                                                                 <ul class="menu ovic-menu">
                                                                                     @foreach (var productItem in productCategory)
                                                                                     {
-                                                                                        <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="@Anpero.StringHelpper.GetProductLink(productItem.CatName,productItem.Id)">@productItem.PrName.Split('|').FirstOrDefault().Trim()</a></li>
+                                                                                        <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="@Anpero.StringHelpper.GetProductLink(productItem.PrName,productItem.Id)">@productItem.PrName.Split('|').FirstOrDefault().Trim()</a></li>
                                                                                     }
                                                                                 </ul>
                                                                             </div>
