--- a/02_BDS_BatDongSan_MultiLand/Views/Home/Index.cshtml
+++ b/02_BDS_BatDongSan_MultiLand/Views/Home/Index.cshtml
@@ -126,22 +126,22 @@ else
 
                                                     </div>
                                                     <div class="right-block">
-                                                        <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">@item.PrName</a></h5>
-                                                        @if (item.Price > 0)
-                                                        {
-                                                            <div class="content_price">
-                                                                <span class="price product-price">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ") </span>
-                                                            </div>
-                                                        }
-                                                        @if (item.Warranty > 0)
-                                                        {
-                                                            <span class="pull-right"> <strong>Diện tích:</strong> @item.Warranty m²</span>
-                                                        }
-                                                        <div class="info-orther ">
-                                                            <div class="product-desc">
+                                                        <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">
+                                                            <h5 class="product-name" style="color:#337ab7;">@item.PrName</h5>
+                                                            @if (item.Price > 0)
+                                                            {
+                                                                <div class="content_price">
+                                                                    <span class="price product-price">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ") </span>
+                                                                </div>
+                                                            }
+                                                            @if (item.Warranty > 0)
+                                                            {
+                                                                <span class="pull-right"> <strong>Diện tích:</strong> @item.Warranty m²</span>
+                                                            }
+                                                            <div class="info-orther">
                                                                 @item.ShortDesc
                                                             </div>
-                                                        </div>
+                                                        </a>
                                                     </div>
                                                 </div>
                                             </li>
