--- a/02_BDS_BatDongSan_MultiLand/assets/css/style.css
+++ b/02_BDS_BatDongSan_MultiLand/assets/css/style.css
@@ -2161,8 +2161,7 @@ span.notify-right {
     }
 
     .product-list li .right-block {
-        padding: 0 15px;
-        margin-top: 15px;
+        padding: 0 15px;        
     }
 
     .product-list li .quick-view {
@@ -3860,13 +3859,14 @@ span.notify-right {
 
 .product-list.list .right-block {
     width: 71%;
-    float: left;
-    margin-top: 20px;
+    float: left;    
     line-height: 26px;
 }
 
 .product-list.list .info-orther {
     display: block;
+    font-size: 12px;
+    font-style: italic;
 }
 
 .product-list.list .right-block .product-name {
@@ -3880,6 +3880,7 @@ span.notify-right {
 .product-list.list .right-block .product-desc {
     line-height: 24px;
     margin-top: 20px;
+  
 }
 
 .product-list.style2.grid .add-to-cart {
