--- a/12_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/12_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -147,113 +147,8 @@
         <!--box-top-products-->
     }
 }
-
-@if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
-{
-
-    foreach (var items in commonInfo.ProductCategoryList)
-    {
-
-        AnperoService sv = new AnperoService();
-        AnperoFrontend.WebService.SearchResult newestProduct = sv.GetProductByParentCategory(ViewBag.storeId, ViewBag.TokenKey, items.Id, 1, 6, 0);
-        if (newestProduct != null && newestProduct.Item.Length > 0)
-        {
-            <div class="box-item-product">
-                <div class="container">
-                    <div class="box-title">
-                        <h2 class="title">
-                            <a href="@Anpero.StringHelpper.GetParentCategoryLink(items.Name,items.Id)">@items.Name</a>
-                        </h2>
-                        @*<ul class="nav-list">
-                                <li><a href="#">Trang chủ</a></li>
-                                <li><a href="#">Sản phẩm</a></li>
-                                <li><a href="#">Khuyến mãi HOT</a></li>
-                                <li><a href="#">Sản phẩm mới</a></li>
-                                <li><a href="#">Thương hiệu</a></li>
-                                <li><a href="#">Tin tức</a></li>
-                                <li><a href="#">Giới thiệu</a></li>
-                            </ul>*@
-                        <div class="visible-xs visible-sm open-menu">
-                            <a href="javascript:void(0);">
-                                <img src="/images/icons/icon-menu-right.png" />
-                            </a>
-                        </div>
-                    </div>
-                    <div class="box-item-product-content">
-                        <div class="row">
-                            <div class="col-md-12 col-sm-12 col-xs-12 left-item-product-content">
-
-                                <div class="item-slide">
-                                    <div class="image-hover">
-                                        <a href="@Anpero.StringHelpper.GetParentCategoryLink(items.Name,items.Id)"><img class="" alt="" src="@items.Images"></a>
-                                    </div>
-                                </div>
-                                <div class="box-top-products box-slide">
-                                    <div class="owl-carousel owl-carousel-6" id="">
-                                        @for (var i = 0; i < newestProduct.Item.Length; i++)
-                                        {
-                                            var item = newestProduct.Item[i];
-
-                                            <div class="item box-product">
-                                                <div class="main">
-                                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="images">
-                                                        @if (item.IsInstock)
-                                                        {
-                                                            <span class="lable-sale"> mới</span>
-                                                        }
-                                                        else
-                                                        {
-                                                            <span class="lable-sold">Hết hàng</span>
-                                                        }
-                                                        <img src="@item.Images" alt="@item.PrName">
-                                                    </a>
-                                                    <div class="list-action">
-                                                        <a href="https://www.facebook.com/sharer/sharer.php?u=@currentUrl" target="_blank" title="Chia sẻ với bạn bè" class="btn-quickview-1"><i class="fa fa-share-alt" aria-hidden="true"></i></a>
-                                                        <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="view-product"><i class="fa fa-eye-slash" aria-hidden="true"></i></a>
-                                                        @if (item.IsInstock)
-                                                        {
-                                                            <a href="javascript:Cart.addProduct(@item.Id,'@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price)','@item.Images','@item.PrName')" class="add-cart" title="Mua hàng">
-                                                                <i class="fa fa-shopping-bag" aria-hidden="true"></i>
-                                                            </a>
-                                                        }
-                                                        else
-                                                        {
-                                                            <a href="javascript:void(0);" class="add-cart" title="Mua hàng">
-                                                                <i class="fa fa-shopping-bag" aria-hidden="true"></i>
-                                                            </a>
-                                                        }
-                                                    </div>
-                                                    <div class="detail text-center clearfix">
-                                                        <h3 class="name">
-                                                            <a class="" ref="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
-                                                                @item.PrName
-                                                            </a>
-                                                        </h3>
-                                                        <div class="box-prince">
-                                                            <span class="prince-new">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
-                                                            @if (item.IsSale)
-                                                            {
-                                                                <span class="prince-old">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
-                                                            }
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        }
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
-        }
-    }
-
-
-}
+@*@Html.Partial("_partial_ProductListBycategory")*@
+@Html.Partial("_partial_NewProduct")
 
 @if (ViewBag.Ads3 != null)
 {
