--- a/12_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
     <div class="main-page">
         @RenderBody()
 
-        <section class="contact-area section-padding section-relative" id="contact">
+        <section class="contact-area section-padding section-relative" id="contact" style="margin-bottom:-30px;">
             <div class="section-bg"></div>
             <div class="container">
                 <div class="row">
