--- a/16_Shop_MultiProduct/Views/Product/Index.cshtml
+++ b/16_Shop_MultiProduct/Views/Product/Index.cshtml
@@ -26,8 +26,8 @@
     @section Styles {
 
         <style>
-          
-            
+
+
             .qtyControl {
                 cursor: pointer;
             }
@@ -329,6 +329,7 @@
                 });
                         $('#sldetest').slick({
                             autoplay: true,
+                            arrows: true,
                             //vertical: true,
                             slidesToShow: 4,
                             slidesToScroll: 1,
